# sensorium

./: .gitignore  README.md  pyproject.toml  run.py  run_llm.py
configs/: alignment.yaml  imu.yaml  llm.yaml  tactile.yaml  visual.yaml
data/collector/: record.py
data/preprocessor/: build_dataset.py
deploy/jetson/: export.py
hardware/tactile_array/: tactile_array.ino
sensorium/: __init__.py
sensorium/core/: __init__.py  losses.py  quantizer.py
sensorium/drivers/: __init__.py  camera.py  imu.py  microphone.py  tactile.py
sensorium/encoders/: __init__.py  audio.py  imu.py  tactile.py  visual.py
sensorium/llm/: __init__.py  context.py  process.py  vocab.py
sensorium/pipeline/: __init__.py  runtime.py
sensorium/reflex/: __init__.py  engine.py
tools/: inspect_codebook.py
train/: train_alignment.py  train_imu.py  train_llm.py  train_tactile.py  train_visual.py
