[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sensorium"
version = "0.1.0"
description = "多模态原子感知系统 — 从原始传感器信号到涌现式理解"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.17.0",
    "lightning>=2.2.0",
    "transformers>=4.40.0",
    "einops>=0.7.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "wandb>=0.16.0",
    "rich>=13.0.0",
    "pyserial>=3.5",         # FSR 串口通信
]

[project.optional-dependencies]
ros = ["rclpy"]
deploy = ["onnx>=1.16.0", "onnxruntime-gpu>=1.18.0"]
dev = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.9.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sensorium*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
